fix: overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    scroll-behavior: smooth;
-  }
-  
+body, html {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
 :root{
     font-family: 'Satoshi', sans-serif;
     font-optical-sizing: auto;
